; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/hx509/extr_crypto.c_find_string2key.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/hx509/extr_crypto.c_find_string2key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASN1_OID_ID_PBEWITHSHAAND40BITRC2_CBC = common dso_local global i32 0, align 4
@PBE_string2key = common dso_local global i32 0, align 4
@asn1_oid_private_rc2_40 = common dso_local global i32 0, align 4
@ASN1_OID_ID_PBEWITHSHAAND128BITRC2_CBC = common dso_local global i32 0, align 4
@ASN1_OID_ID_PKCS3_RC2_CBC = common dso_local global i32* null, align 8
@ASN1_OID_ID_PBEWITHSHAAND3_KEYTRIPLEDES_CBC = common dso_local global i32 0, align 4
@ASN1_OID_ID_PKCS3_DES_EDE3_CBC = common dso_local global i32* null, align 8
@ASN1_OID_ID_PBEWITHSHAAND128BITRC4 = common dso_local global i32 0, align 4
@ASN1_OID_ID_PBEWITHSHAAND40BITRC4 = common dso_local global i32 0, align 4
@ASN1_OID_ID_PKCS3_RC4 = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32**, i32**, i32*)* @find_string2key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @find_string2key(i32* %0, i32** %1, i32** %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i32** %2, i32*** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* @ASN1_OID_ID_PBEWITHSHAAND40BITRC2_CBC, align 4
  %12 = call i64 @der_heim_oid_cmp(i32* %10, i32 %11)
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %4
  %15 = call i32* (...) @EVP_rc2_40_cbc()
  %16 = load i32**, i32*** %7, align 8
  store i32* %15, i32** %16, align 8
  %17 = call i32* (...) @EVP_sha1()
  %18 = load i32**, i32*** %8, align 8
  store i32* %17, i32** %18, align 8
  %19 = load i32, i32* @PBE_string2key, align 4
  %20 = load i32*, i32** %9, align 8
  store i32 %19, i32* %20, align 4
  store i32* @asn1_oid_private_rc2_40, i32** %5, align 8
  br label %50

21:                                               ; preds = %4
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* @ASN1_OID_ID_PBEWITHSHAAND128BITRC2_CBC, align 4
  %24 = call i64 @der_heim_oid_cmp(i32* %22, i32 %23)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %34

26:                                               ; preds = %21
  %27 = call i32* (...) @EVP_rc2_cbc()
  %28 = load i32**, i32*** %7, align 8
  store i32* %27, i32** %28, align 8
  %29 = call i32* (...) @EVP_sha1()
  %30 = load i32**, i32*** %8, align 8
  store i32* %29, i32** %30, align 8
  %31 = load i32, i32* @PBE_string2key, align 4
  %32 = load i32*, i32** %9, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32*, i32** @ASN1_OID_ID_PKCS3_RC2_CBC, align 8
  store i32* %33, i32** %5, align 8
  br label %50

34:                                               ; preds = %21
  %35 = load i32*, i32** %6, align 8
  %36 = load i32, i32* @ASN1_OID_ID_PBEWITHSHAAND3_KEYTRIPLEDES_CBC, align 4
  %37 = call i64 @der_heim_oid_cmp(i32* %35, i32 %36)
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %39, label %47

39:                                               ; preds = %34
  %40 = call i32* (...) @EVP_des_ede3_cbc()
  %41 = load i32**, i32*** %7, align 8
  store i32* %40, i32** %41, align 8
  %42 = call i32* (...) @EVP_sha1()
  %43 = load i32**, i32*** %8, align 8
  store i32* %42, i32** %43, align 8
  %44 = load i32, i32* @PBE_string2key, align 4
  %45 = load i32*, i32** %9, align 8
  store i32 %44, i32* %45, align 4
  %46 = load i32*, i32** @ASN1_OID_ID_PKCS3_DES_EDE3_CBC, align 8
  store i32* %46, i32** %5, align 8
  br label %50

47:                                               ; preds = %34
  br label %48

48:                                               ; preds = %47
  br label %49

49:                                               ; preds = %48
  store i32* null, i32** %5, align 8
  br label %50

50:                                               ; preds = %49, %39, %26, %14
  %51 = load i32*, i32** %5, align 8
  ret i32* %51
}

declare dso_local i64 @der_heim_oid_cmp(i32*, i32) #1

declare dso_local i32* @EVP_rc2_40_cbc(...) #1

declare dso_local i32* @EVP_sha1(...) #1

declare dso_local i32* @EVP_rc2_cbc(...) #1

declare dso_local i32* @EVP_des_ede3_cbc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
